Add spring security and authenticaion logic for login/register forms
